# AI-Cyberdefense

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
cyberdefense_agent/: __init__.py  approvals.py  baseline.py  cases.py  cli.py  config.py  correlation.py  countermeasures.py  custom_rules.py  dashboard.py  engine.py  entities.py  events.py  feedback.py  investigation.py  memory.py  parsers.py  playbooks.py  response.py  response_export.py  rule_packs.py  rules.py  threat_intel.py  triage.py
cyberdefense_agent/rule_packs/: exfiltration.yaml  identity.yaml  network.yaml  web.yaml  windows.yaml
docs/images/: README.md
samples/: baseline.json  baseline_events.jsonl  config.json  events.jsonl  local_rules.yaml  threat_intel.json  threat_intel_events.jsonl  windows_security.csv
tests/: test_agent.py  test_cli.py  test_cloud_rules.py  test_config.py  test_custom_rules.py  test_dashboard.py  test_entities.py  test_parsers.py  test_response_export.py  test_threat_intel.py
