[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-cyberdefense-agent"
version = "0.1.0"
description = "Local, lab-safe defensive security event analyzer and incident workflow demo."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
cyberdefense-agent = "cyberdefense_agent.cli:main"

[tool.setuptools.packages.find]
include = ["cyberdefense_agent*"]
